# fastapi-postgresql-boilerplate

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 01ec495bc286_create_item_table.py
app/: main.py
app/api/v1/endpoints/: base.py  item.py
app/controllers/api/v1/endpoints/: base.py  item.py
app/core/: config.py  logging_config.py
app/db/: base.py  base_class.py  session.py
app/models/: __init__.py  item.py
app/repositories/: __init__.py  base.py  item.py
app/schemas/: __init__.py  item.py
app/services/: item.py
app/use_cases/: item.py
app/usecases/: item.py
exceptions/: exceptions.py
tests/: conftest.py
tests/api/v1/endpoints/: test_item.py
tests/controllers/api/v1/endpoints/: test_item.py
tests/repositories/: test_item.py
tests/usecases/: __init__.py  test_item.py
