[tool.poetry]
name = "cookiecutter-fastapi-postgresql"
version = "0.1.0"
description = ""
authors = ["Aljon Mendiola"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.0"
uvicorn = "0.31.0"
psycopg = "3.2.3"
sqlalchemy = "2.0.35"
alembic = "1.13.3"
pydantic = "2.9.2"
python-dotenv = "1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
